--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,17 @@
 <resources>
     <string name="app_name">Musicians (Yandex)</string>
 
-    <string name="missing_text">Cant load data</string>
-    <string name="no_genres">No genres for this singer</string>
-    <string name="album_count_ends_with_1">\u00A0альбом,\u00A0</string>
-    <string name="album_count_ends_with_2">\u00A0альбома,\u00A0</string>
-    <string name="album_count_ends_with_5">\u00A0альбомов,\u00A0</string>
-    <string name="song_count_ends_with_1">\u00A0песня</string>
-    <string name="song_count_ends_with_2">\u00A0песни</string>
-    <string name="song_count_ends_with_5">\u00A0песен</string>
+    <string name="missing_text">Нет данных</string>
+    <string name="no_genres">Не найдено жанров</string>
+    <string name="concatenator_for_genres">%1$s,\u00A0%2$s</string>
+    <plurals name="album_count">
+        <item quantity="one">%d\u00A0альбом,\u00A0</item>
+        <item quantity="few">%d\u00A0альбома,\u00A0</item>
+        <item quantity="other">%d\u00A0альбомов,\u00A0</item>
+    </plurals>
+    <plurals name="song_count">
+        <item quantity="one">%d\u00A0песня\u00A0</item>
+        <item quantity="few">%d\u00A0песни\u00A0</item>
+        <item quantity="other">%d\u00A0песен\u00A0</item>
+    </plurals>
 </resources>
